# CAE32

./: .gitignore  CONTRIBUTING.md  COPYING.txt  Dockerfile  Makefile  README.md  setup.sh
.github/workflows/: build.yml
Codigo/: README.md  checking_dependency.sh
Codigo/Desktop_files/: start_GUI.sh
Codigo/Device_simulation/: README.md
Codigo/Device_simulation/src/: Joystick.c  nombre.c  uhid-HID.c
Codigo/Firmware/Main_board/: CMakeLists.txt  sdkconfig
Codigo/Firmware/Main_board/components/: CMakeLists.txt  component.mk
Codigo/Firmware/Main_board/components/include/: ComunicacionUSB.h  Encoders.h  Marchas.h  Tareas.h
Codigo/Firmware/Main_board/components/src/: ComunicacionUSB.c  Encoders.c  Marchas.c  Tareas.c
Codigo/Firmware/Main_board/main/: main.c
Codigo/Firmware/Main_board_HID/ESP32-S3/: .clang-format  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Codigo/Firmware/Main_board_HID/ESP32-S3/components/: CMakeLists.txt
Codigo/Firmware/Main_board_HID/ESP32-S3/components/include/: Spi_communication.h  Usb_communication.h  Wheel_task.h
Codigo/Firmware/Main_board_HID/ESP32-S3/components/src/: Spi_communication.c  Usb_communication.c  Wheel_task.c
Codigo/Firmware/Modules/Pedals/: README.md  STM32G070KBTX_FLASH.ld  pedales.ioc
Codigo/Interfaz_grafica/: README.md
Codigo/Interfaz_grafica/Interfaz_gtk/: CMakeLists.txt
Codigo/Interfaz_grafica/Interfaz_gtk/gladeFiles/: UI1.glade  UI2.glade
Codigo/Interfaz_grafica/Interfaz_gtk/include/: device.h  objectsGtk.h
Codigo/Interfaz_grafica/Interfaz_gtk/src/: cae32_app.c  device.c  objectsGtk.c
Codigo/Shared_libraries/Device_descriptors/include/: device_descriptor.h
Codigo/Shared_libraries/Device_descriptors/src/: device_desc_pedals.c  device_descriptor.c
Codigo/TESTs/: CMakeLists.txt
Codigo/TESTs/device_descriptor/: CMakeLists.txt  device_descriptor_tester.c  devices.c32  parser.c  parser.h  test.c32  token_manipulation.c  token_manipulation.h
Codigo/TESTs/device_descriptor/include/: parser.h  token_manipulation.h
Codigo/TESTs/device_descriptor/src/: parser.c  token_manipulation.c
Codigo/TESTs/device_descriptor/unit_tests/: CMakeLists.txt  test.c32  test_parser.cpp  test_strings.cpp  test_token_manipulation.cpp
Codigo/TESTs/unit_tests/: string.c
Codigo/configs/: device_descriptor.c  lol.h
Esquematicos/: README.md
Esquematicos/CAE32_PCB/Hall_PCB/BOM/: Hall_PCB.csv
Esquematicos/CAE32_PCB/Hall_PCB/hall_pcb/: hall_pcb.kicad_sch
Esquematicos/CAE32_PCB/Modular/BOM/: Modular.csv
Esquematicos/CAE32_PCB/Modular/Modular/: Modular.csv  Modular.kicad_pcb  Modular.kicad_prl  Modular.kicad_pro  Modular.kicad_sch  Modular.xml
Esquematicos/CAE32_PCB/Pedals/: ADC.kicad_sch  Connectors.kicad_sch  Pedals.kicad_pcb  Pedals.kicad_prl  Pedals.kicad_pro  Pedals.kicad_sch  Power.kicad_sch  README.md
Esquematicos/CAE32_PCB/Pedals/3d Models/: TS-1095PD-A16B2-D2-Part.step
Esquematicos/CAE32_PCB/Pedals/BOM/: Pedals.csv
Esquematicos/CAE32_PCB/Pedals/CutPcbLayout/: layout.FCStd
Esquematicos/CAE32_PCB/Pedals/Extra_components.pretty/: TS-1095PD-A16B2-D2.kicad_mod
Esquematicos/CAE32_PCB/Pedals/Pedals/: ADC.kicad_sch  Connectors.kicad_sch  Load_cells.kicad_sch  Pedals.kicad_pcb  Pedals.kicad_prl  Pedals.kicad_pro  Pedals.kicad_sch  Power.kicad_sch  Rpizero.kicad_sym  fp-lib-table  sym-lib-table
Esquematicos/CAE32_PCB/Shifter/: Power.kicad_sch  Shifter.kicad_pcb  Shifter.kicad_prl  Shifter.kicad_pro  Shifter.kicad_sch  fp-lib-table  sym-lib-table
Esquematicos/CAE32_PCB/Shifter/shifter.pretty/: BM28B0-6-16DS.kicad_mod  Pad_1x13_THT_1.27mm.kicad_mod  shi.kicad_mod
Esquematicos/CAE32_PCB/Steering_Wheel_FFB/: Steering_Wheel_FFB.kicad_pcb  Steering_Wheel_FFB.kicad_prl  Steering_Wheel_FFB.kicad_pro  Steering_Wheel_FFB.kicad_sch
Esquematicos/CAE32_PCB/Steering_Wheel_FFB/3D_models/: cutOutPcb-Shape2DView.dxf  cutOutPcb.FCStd
Esquematicos/Modelos_3D_Componentes_electricos/: EVQPUM02K-Part.step  EVQPUM02K.FCStd
STM32_HID_Joystick/: blink.ioc
STM32_HID_Joystick/Core/Inc/: stm32f0xx_it.h
STM32_HID_Joystick/Core/Src/: stm32f0xx_it.c
STM32_HID_Joystick/USB_DEVICE/App/: usbd_desc.c
Schematics/CAE32_PCB/Hall_PCB/CutPcbLayout/: edges.FCStd
Schematics/CAE32_PCB/Pedals/: ADC.kicad_sch  Connectors.kicad_sch  Load_cells.kicad_sch  Pedals.kicad_pcb  Pedals.kicad_prl  Pedals.kicad_pro  Pedals.kicad_sch  Power.kicad_sch  Rpizero.bak
Schematics/CAE32_PCB/Shifter/: Shifter.kicad_prl  Shifter.kicad_pro  Shifter.kicad_sch  shifter.kicad_sym
Schematics/CAE32_PCB/Steering_Wheel_FFB/: Steering_Wheel_FFB.kicad_pcb  Steering_Wheel_FFB.kicad_prl
Source Code/: Makefile  checking_dependency.sh  config_file
Source Code/Device_simulation/: README.md
Source Code/Device_simulation/src/: Joystick.c  Makefile  uhid-HID.c
Source Code/Interfaz_grafica/: Makefile
Source Code/Interfaz_grafica/Interfaz_gtk/: CMakeLists.txt
Source Code/Shared_libraries/: lol.c
Source Code/TESTs/device_descriptor/: CMakeLists.txt  device_descriptor_tester.c  devices.c32
Source Code/TESTs/device_descriptor/include/: parser.h  read_event.h  read_file_descriptor.h  struct_manipulation.h  token_manipulation.h
Source Code/TESTs/device_descriptor/src/: parser.c  read_event.c  read_file_descriptor.c  struct_manipulation.c  token_manipulation.c
Source Code/TESTs/device_descriptor/unit_tests/: test-cases.md  test_parser.cpp
Source_code/: Makefile  README.md  checking_dependency.sh
Source_code/Device_simulation/: CMakeLists.txt
Source_code/Interfaz_grafica/Interfaz_gtk/: CMakeLists.txt  main.c  setup.sh
Source_code/Interfaz_grafica/Interfaz_gtk/include/: cae32_app.h
Source_code/Interfaz_grafica/Interfaz_gtk/src/: device.c
Source_code/TESTs/: README.md
Source_code/TESTs/device_descriptor/: CMakeLists.txt  device_descriptor_tester.c  devices.c32
Source_code/blink/: .cproject  .mxproject  STM32F072RBTX_FLASH.ld  blink Debug.launch  blink.ioc
UML/: UML_notes.md  Use_cases.xmi  all_general_functions.md  general_notes.md  notes.md  tdd.md
UML/structure_in_detail/: Pedals.md
docs/: CONTRIBUTING-english.md
(+60 files in other folders)
